// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FoldableContainerSnap should render a left fold correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 100%;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: 1px solid colorBorderDividerDefault;
  border-right: 1px solid colorBorderDividerDefault;
}

.c2:hover {
  background-color: colorBackgroundDropdownItemHover;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    My Content
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <Icon
      name="angle-left"
      size="small"
      variant="normal"
    />
  </div>
</div>
`;

exports[`FoldableContainerSnap should render a right fold correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 100%;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-left: 1px solid colorBorderDividerDefault;
  border-right: 1px solid colorBorderDividerDefault;
}

.c2:hover {
  background-color: colorBackgroundDropdownItemHover;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    My Content
  </div>
  <div
    className="c2"
    onClick={[Function]}
  >
    <Icon
      name="angle-right"
      size="small"
      variant="normal"
    />
  </div>
</div>
`;
